Clean up Enums - Make each option have its own line - Remove spacing between option and option values